hphp/hack/test/typecheck/inout/bad_inout_hint_return2.php.like_types.exp
File "bad_inout_hint_return2.php", line 4, characters 10-26:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "bad_inout_hint_return2.php", line 4, characters 10-26:
Invalid return type (Typing[4184])
File "bad_inout_hint_return2.php", line 4, characters 17-18:
This is an inout parameter
File "bad_inout_hint_return2.php", line 3, characters 27-29:
It is incompatible with a normal parameter
